@@ -397,7 +397,7 @@ bounding area is entire image.</font></td>
 
 <tr>
 <td><font size=-1>const std::string &amp;text_, <a href="Enumerations.html#GravityType">GravityType</a>
-gravity_ = NorthWestGravity</font></td>
+gravity_</font></td>
 
 <td><font size=-1>Annotate with text (bounding area is entire image) and
 placement gravity.</font></td>
